# judger

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  c_cpp.c  child.c  general.c  go.mod  judger.go  main.go  runner.h  seccomp_rules.h
judger/: judger.go
sandbox/: CMakeLists.txt
test_programs/a+b/: a+b  a+b.c
